// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests Button tests with snapshot button disabled 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`Button tests Button tests with snapshot button with loading 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</DocumentFragment>
`;

exports[`Button tests Button tests with snapshot button with text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Кнопка с текстом
    </p>
  </button>
</DocumentFragment>
`;

exports[`Button tests Button tests with snapshot button without text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`Button tests button disabled 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`Button tests button with loading 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</DocumentFragment>
`;

exports[`Button tests button with text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Кнопка с текстом
    </p>
  </button>
</DocumentFragment>
`;

exports[`Button tests button without text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`button tests button disabled 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`button tests button with loading 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</DocumentFragment>
`;

exports[`button tests button with text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Кнопка с текстом
    </p>
  </button>
</DocumentFragment>
`;

exports[`button tests button without text 1`] = `
<DocumentFragment>
  <button
    class="text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;
